test/invalid/idl/extattr-double-field.widl
dictionary Foo {
  [Clamp] [Clamp] unsigned long value;
};
